****************************************************************************

General Improvements
--------------------

 - 

Third party components
----------------------

 - 


****************************************************************************
*                   Important Behavior Changes                             *
****************************************************************************

- QtWidgets

  * [QTBUG-8836] QAbstractItemView now allows manual deselect in
    SingleSelection mode (with control modifier)

****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------

 -

QtGui
-----

 -


QtNetwork
---------

 -



****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------
 -

Qt for Windows
--------------
 -

Qt for Mac OS X
---------------
 -

Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Plugins                                         *
****************************************************************************

