@@ -3,6 +3,10 @@ DECL|function|QMargins
 DECL|function|bottom
 DECL|function|isNull
 DECL|function|left
+DECL|function|marginsAdded
+DECL|function|marginsRemoved
+DECL|function|operator
+DECL|function|operator
 DECL|function|operator
 DECL|function|operator
 DECL|function|right
@@ -12,3 +16,4 @@ DECL|function|setRight
 DECL|function|setTop
 DECL|function|top
 DECL|macro|QMARGINS_H
+DECL|member|operator
