@@ -103,3 +103,4 @@ DECL|function|y
 DECL|macro|QRECT_H
 DECL|member|operator
 DECL|member|operator
+DECL|variable|QMargins
