@@ -7,8 +7,6 @@ DECL|function|mapFromGlobal
 DECL|function|mapFromGlobal
 DECL|function|mapToGlobal
 DECL|function|mapToGlobal
-DECL|function|operator
-DECL|function|operator
 DECL|function|setUserDataOf
 DECL|function|userDataOf
 DECL|macro|QWINDOWSWINDOW_H
